# sae4u-memory

./: CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md
hooks/: memory-tick.sh
prompts/: session-close.md  session-open.md
rules/: agents-no-delete-features.md  grep-before-asking.md  memory-architecture-minimalist.md  memory-cleanup-interactive.md  memory-tick-protocol.md  no-hardcode.md  no-session-state-confabulation.md
sae4u_memory/: __init__.py  init.py  markdown_memory.py  memory.py  persona.py  server.py
sae4u_memory/_assets/commands/: memory-distill.md
sae4u_memory/_assets/docs/: episodic-bridge.md  persona-customization.md  tick-protocol.md
sae4u_memory/_assets/rules/: post-write-review.md  session-open-mirror-handoff.md  verify-evidence-before-citing.md
sae4u_memory/_assets/templates/: MEMORY.md.template  feedback-rule.md.template
templates/: project-fact.md.template  tick-log.md.template
