[project]
name = "sae4u-memory"
version = "0.2.0"
description = "Persistent memory architecture for Claude — MCP server + hooks + rules + prompts. Part of the SAE4U OSS family."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Simple4u", email = "nests@simple4uhq.com" }]
keywords = ["claude", "mcp", "ai", "memory", "persistent", "anthropic", "sae4u"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sae4u-memory = "sae4u_memory.server:main"

[project.urls]
Homepage = "https://github.com/Simple4uhq/sae4u-memory"
Repository = "https://github.com/Simple4uhq/sae4u-memory"
Issues = "https://github.com/Simple4uhq/sae4u-memory/issues"
SisterProject = "https://github.com/Simple4uhq/sae4u-agent"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sae4u_memory*"]
